--- a/src/style/index.less
+++ b/src/style/index.less
@@ -54,28 +54,15 @@ img {
 }
 
 body {
-  font: 16px/1.5 Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun,
-    sans-serif;
+  font: 12px/1.5 PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
   margin: 0;
   padding: 0;
   background: #ffffff;
+  overflow: hidden;
 }
 
 #app {
   height: 100vh;
-  overflow: auto;
-  //水印
-  #repeat-watermark {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    pointer-events: none;
-    z-index: 99999;
-    //height: 100vh;
-    //opacity: 0.7;
-  }
   //清除浮动
   .clearFixed:after {
     content: "";
@@ -121,6 +108,7 @@ body {
   // 输入框内部容器高度覆盖
   .el-input__inner {
     height: 32px;
+    font-size: 12px;
   }
   // 输入框内字符图片样式覆盖
   .el-input__icon {
@@ -146,5 +134,19 @@ body {
   }
   .el-divider--horizontal {
     margin: 12px 0;
+  }
+  .el-form-item__label {
+    font-size: 12px;
+  }
+  .el-form-item__error {
+    font-size: 12px;
+  }
+  .block {
+    position: relative;
+    box-sizing: border-box;
+    width: 90%;
+    padding: 10px;
+    margin: 0 auto;
+    box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
   }
 }
