--- a/src/style/index.less
+++ b/src/style/index.less
@@ -149,4 +149,16 @@ body {
     margin: 0 auto;
     box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
   }
+  .list-enter-active {
+    transition: all 0.5s ease;
+  }
+
+  .list-enter-from {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  .list-leave-to {
+    opacity: 1;
+    transform: translateX(-30px);
+  }
 }
